--- a/website/static/index.html
+++ b/website/static/index.html
@@ -13,7 +13,7 @@
 
       window.location.href = "/en";
     </script>
-    <title>Ares Wiki</title>
+    <title>Ares Wikipedia</title>
   </head>
   <body>
     If you are not redirected automatically, follow this <a href="https://wiki.polkadot.network/docs/en/getting-started.html">link</a>.
