add #whitepaper to /introduction

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -11,7 +11,12 @@
         window.location.href = "docs/en/contributing";
       }
 
+
       window.location.href = "/en";
+
+      if(window.location.hash === "#/whitepaper") {
+        window.location.href ="/docs/en/introduction";
+      }
     </script>
     <title>Ares Wikipedia</title>
   </head>
